--- a/app/views/apis/index.html.erb
+++ b/app/views/apis/index.html.erb
@@ -16,7 +16,7 @@
 <% end %>
 <div class="container-fluid">
   <div class="row-fluid">
-       <div class="span6" style="background-color: bisque">
+       <div class="span6">
          <%= form_for(@api,:remote=>true) do |f| %>
              <div class="tabbable" style="margin-bottom: 9px;">
                <ul class="nav nav-tabs">
@@ -28,8 +28,9 @@
                  <div class="tab-pane" id="1">
                    <input type="text" class="form-control" size="20" placeholder="标签" name="api[label]" value="<%=@api.label%>">
                    <div class="field">
-                     <%= f.label :desc %><br />
-                     <%= f.text_field :desc %>
+                     <textarea class="form-control" placeholder="描述信息" name="api[desc]"   wrap="logical" style="width: 98%" rows ="20">
+                       <%= @api[:desc] %>
+                    </textarea>
                    </div>
                  </div>
                  <div class="tab-pane active" id="2">
