更新mongo数据库配置

--- a/app/views/apis/_display.html.erb
+++ b/app/views/apis/_display.html.erb
@@ -1,16 +1,2 @@
-                       <%= content_tag :a, "Modal", :href => "#modal", :class => 'btn', :data => {:toggle => 'modal'} %>
-
-<%= modal_dialog :id => "modal",
-         :header => { :show_close => true, :dismiss => 'modal', :title => 'Modal header' },
-                 :body   => 'This is the body',
-                 :footer => content_tag(:button, 'Save', :class => 'btn') %>                       
-                     
-                     
-                     
-                     
-                     
-                     
-                     
-                     
-                     
+ test                      
                      
